k8s/main/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kuber-service
  labels:
    app: kuber-service
spec:
  selector:
    env: dev-label-name
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: metrics
  type: NodePort
